indexer-bind/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: indexer-bind
    app.kubernetes.io/name: indexer-bind
  name: indexer-bind
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: indexer-bind
      app.kubernetes.io/name: indexer-bind
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: indexer-bind
        app.kubernetes.io/name: indexer-bind
    spec:
      containers:
        - image: registry.devops.rivtower.com/web5/indexer-bind:${INDEXER_BIND_VERSION}
          imagePullPolicy: Always
          name: indexer-bind
          command: ['address-bind-be']
          args:
            [
              '--network',
              '$(CKB_NETWORK)',
              '--ckb-url',
              '$(CKB_NODE)',
              'indexer',
              '--log-filter',
              'debug,hyper_util=info,sqlx=info',
              '--port',
              '$(PORT)',
              '--db-url',
              '$(DB_URL)',
              '-s',
              '$(START_HEIGHT)',
            ]
          ports:
            - containerPort: ${INDEXER_BIND_PORT}
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: {}
        - image: m.daocloud.io/docker.io/postgres:17-bookworm
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
  volumeClaimTemplates:
    - metadata:
        name: database
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: local-path
        resources:
          requests:
            storage: 50Gi
